fix alignment in Card component

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,8 @@
 .card {
   display: flex;
-  flex: 1 20%;
   flex-direction: column;
+  justify-content: space-between;
+  flex: 1 20%;
   background-color: var(--white);
   border-radius: 15px;
   max-width: 280px;
@@ -14,7 +15,7 @@
   img {
     margin: 0 auto;
     max-width: 200px;
-    max-height: 200px;
+    height: 200px;
   }
   h5 {
     flex-grow: 1;
