--- a/src/components/UI/ProductRating/ProductRating.module.scss
+++ b/src/components/UI/ProductRating/ProductRating.module.scss
@@ -1,8 +1,7 @@
 .rating {
   display: flex;
-  align-self: end;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 10px;
   border: 1px solid var(--light-gray);
   border-radius: 8px;
   font-size: 20px;
